Fixes #1925, missing z-index causes animated button to fail inside fixed content

--- a/src/definitions/elements/button.less
+++ b/src/definitions/elements/button.less
@@ -233,6 +233,7 @@
   overflow: hidden;
   vertical-align: @animatedVerticalAlign;
   padding-right: 0em !important;
+  z-index: 1;
 }
 
 .ui.animated.button .content {
